# python_magnetapi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
debian/: changelog  control  rules
debian/patches/: series
old/: create_part.py  testpart.py
python_magnetapi/: __init__.py  attachment.py  cli.py  create_part.py  flow_params.py  geometry.py  hoop_stress.py  inductances.py  magnet.py  material.py  part.py  record.py  site.py  utils.py
tests/: H22111601.json  M23012001.json  test_H1.yaml  test_list.py
