[tool.poetry]
name = "python_magnetapi"
version = "0.1.0"
description = ""
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>",
           "Remi Caumette <remicaumette@icloud.com>" 
          ]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.1"
numpy = "^2.2.1"
scipy = "^1.14.1"
#magnettools = {path = "/home/feelpp/magnettools-1.1.0/build/Python/dist/MagnetTools-1.0.7-py3-none-any.whl"}
#python-magnetgeo = {path = "python_magnetsgeo"}
python-magnetsetup = {path = "../python_magnetsetup"}
python-magnetrun = {path = "../python_magnetrun"}
matplotlib = "*"
rich = "^9.11.0"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
