[tool.poetry]
name = "python_magnetapi"
version = "0.1.0"
description = ""
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>",
           "Remi Caumette <remicaumette@icloud.com>"
          ]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
param = "^1.12.0"
pandas = "^2.2.1"
numpy = "^2.2.2"
scipy = "^1.14.0"
#magnettools = {path = "/home/feelpp/magnettools-1.1.0/build/Python/dist/MagnetTools-1.0.7-py3-none-any.whl"}
#magnettools = "^1.1.0)
#python-magnetgeo = {path = "python_magnetsgeo"}
python-magnetsetup = {path = "../python_magnetsetup", develop = true }
#python-magnetrun = {path = "../python_magnetrun"}
rich = "^9.11.0"



[tool.poetry.dev-dependencies]
pytest = "^8.2.0" 

[tool.poetry.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
